--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -168,18 +168,77 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612121200217_InitialModel.cs" />
+    <Compile Include="Migrations\201612121200217_InitialModel.Designer.cs">
+      <DependentUpon>201612121200217_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121208464_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201612121208464_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201612121208464_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121212435_AddMembershipType.cs" />
+    <Compile Include="Migrations\201612121212435_AddMembershipType.Designer.cs">
+      <DependentUpon>201612121212435_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121215035_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201612121215035_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201612121215035_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121223065_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201612121223065_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201612121223065_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121252124_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201612121252124_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201612121252124_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121306051_AddBirthdayToCustomer.cs" />
+    <Compile Include="Migrations\201612121306051_AddBirthdayToCustomer.Designer.cs">
+      <DependentUpon>201612121306051_AddBirthdayToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121339222_AddGenreToMovie.cs" />
+    <Compile Include="Migrations\201612121339222_AddGenreToMovie.Designer.cs">
+      <DependentUpon>201612121339222_AddGenreToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121340120_AddReleaseDateToMovie.cs" />
+    <Compile Include="Migrations\201612121340120_AddReleaseDateToMovie.Designer.cs">
+      <DependentUpon>201612121340120_AddReleaseDateToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121341559_AddDateAddedToMovie.cs" />
+    <Compile Include="Migrations\201612121341559_AddDateAddedToMovie.Designer.cs">
+      <DependentUpon>201612121341559_AddDateAddedToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121342513_AddNumbersInStockToMovie.cs" />
+    <Compile Include="Migrations\201612121342513_AddNumbersInStockToMovie.Designer.cs">
+      <DependentUpon>201612121342513_AddNumbersInStockToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612121348306_AddGenreTypes.cs" />
+    <Compile Include="Migrations\201612121348306_AddGenreTypes.Designer.cs">
+      <DependentUpon>201612121348306_AddGenreTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomersViewModel.cs" />
+    <Compile Include="ViewModels\DetailsCustomerViewModel.cs" />
+    <Compile Include="ViewModels\DetailsMovieViewModel.cs" />
+    <Compile Include="ViewModels\IndexMovieViewModel.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
+    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-lumen.css" />
@@ -238,6 +297,12 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -249,6 +314,44 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612121200217_InitialModel.resx">
+      <DependentUpon>201612121200217_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121208464_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201612121208464_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121212435_AddMembershipType.resx">
+      <DependentUpon>201612121212435_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121215035_PopulateMembershipTypes.resx">
+      <DependentUpon>201612121215035_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121223065_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201612121223065_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121252124_AddNameToMembershipType.resx">
+      <DependentUpon>201612121252124_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121306051_AddBirthdayToCustomer.resx">
+      <DependentUpon>201612121306051_AddBirthdayToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121339222_AddGenreToMovie.resx">
+      <DependentUpon>201612121339222_AddGenreToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121340120_AddReleaseDateToMovie.resx">
+      <DependentUpon>201612121340120_AddReleaseDateToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121341559_AddDateAddedToMovie.resx">
+      <DependentUpon>201612121341559_AddDateAddedToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121342513_AddNumbersInStockToMovie.resx">
+      <DependentUpon>201612121342513_AddNumbersInStockToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612121348306_AddGenreTypes.resx">
+      <DependentUpon>201612121348306_AddGenreTypes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
